--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <img src="./images/profile.png" alt="Explorin logo">
 
             <div class="personal-info">
-                <h1>Ali Sher Khan</h1>
+                <h1>Ali Sher Khann</h1>
                 <p class="year">Student - 3rd Year (2021-25)</p>
             </div>
 
