--- a/index.html
+++ b/index.html
@@ -16,12 +16,8 @@
     <div class="container">
 
         <div class="sidebar">
-            <img src="./images/profile.png" alt="Explorin logo">
 
-            <div class="personal-info">
-                <h1>Ali Sher Khann</h1>
-                <p class="year">Student - 3rd Year (2021-25)</p>
-            </div>
+                <img src="./images/profile.png" alt="Explorin logo" class="profile-img">
 
             <div class="contact-info">
                 <div class="mail side">
@@ -29,7 +25,7 @@
                     <div>
                         <p>Email</p>
                         <a href="mailto:alisherkhan032@gmail.com" class="contact">
-                            alisherkhan032@gmail.com
+                            ali@gmail.com
                         </a>
                     </div>
                 </div>
@@ -77,7 +73,7 @@
 
         <div class="main">
             <h2 class="title">About Me</h2>
-
+            <div class="yellow-line"></div>
             <div class="about">
                 <p class="about-p">
                     Hey there, I'm thrilled to welcome you to my virtual corner of the internet. I'm currently a
